--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+    <link rel="icon" href="11 Smiley.svg" type="image/x-icon">
     <title>11 Percent Happier!</title>
 </head>
 <body>
-    <br><br><br><br><br>
+    <br><br>
     <p>If Trash Can, You Can!</p>
-    <br><br><br>
+    <br><br>
+    <a href="http://www.potholepress.com">
     <img class="trash" src="trashcan.png">
+    </a>
     <br><br><br>
     <div>
         <img class="happy" src="11PH Publishing House copy.svg">
