Add links to logos

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <p>If Trash Can, You Can!</p>
     <br><br>
     <a href="http://www.potholepress.com">
-    <img class="trash" src="trashcan.png">
+        <img class="trash" src="trashcan.png">
     </a>
     <br><br><br>
     <div>
-        <img class="happy" src="11PH Publishing House copy.svg">
-        <img class="pothole" src="pothole press logo copy.svg">
-        <img class="pub" src="AJR PUBlications copy.svg">
+        <a href="http://www.austinjamesrobinson.org">
+            <img class="happy" src="11PH Publishing House copy.svg">
+        </a>
+        <a href="http://www.austinjamesrobinson.org">
+            <img class="pothole" src="pothole press logo copy.svg">
+        </a>
+        <a href="http://www.linkedin.com/company/ajrpub">
+            <img class="pub" src="AJR PUBlications copy.svg">
+        </a>
     </div>
 </body>
 </html>
