--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br><br>
     <p>If Trash Can, You Can!</p>
     <br><br>
-    <a href="http://www.potholepress.com">
+    <a href="https://www.lulu.com/en/us/shop/heath-fowler-and-austin-robinson/the-self-help-book-they-dont-want-you-to-read/paperback/product-6jk7dj.html">
         <img class="trash" src="trashcan.png">
     </a>
     <br><br><br>
@@ -20,7 +20,7 @@
         <a href="http://www.austinjamesrobinson.org">
             <img class="happy" src="11PH Publishing House copy.svg">
         </a>
-        <a href="http://www.austinjamesrobinson.org">
+        <a href="http://www.potholepress.com">
             <img class="pothole" src="pothole press logo copy.svg">
         </a>
         <a href="http://www.linkedin.com/company/ajrpub">
